Fix TestFileInventory.java to run in IntelliJ
Remove shebang line that prevented IntelliJ compilation. The script now:
- Compiles cleanly with javac (no errors)
- Runs as a source file: java scripts/TestFileInventory.java
- Can be compiled and run: javac + java -cp scripts TestFileInventory
- Works in IntelliJ without compilation errors

Updated documentation to show both usage methods.

Co-authored-by: eppdot <4765210+eppdot@users.noreply.github.com>